# praxis-ai

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UAT_CHECKLISTS.md  UAT_INSTRUCTIONS.md  UAT_LIBRARIAN_QUERY_API.md  examples.yaml  extensions.yaml  mkdocs.yml  praxis.yaml  pyproject.toml  session.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: config.yml  github-issue-feature.md  security-trust-posture.md
.github/workflows/: ci.yml
adr/: 001-policy-engine.md  003-extension-manifest-schema.md  004-directory-structure-prompts-workflows-templates.md  004-versioning-and-naming-schemes.md  005-agentic-performance-tracking.md  index.md
core/: README.md  authority-and-change-control.md
core/ai/: README.md  ai-guards.md  model-selection-matrix.md
core/checklists/: capture.md  close.md  commit.md  execute.md  explore.md  formalize-code.md  formalize.md  sense.md  shape.md  sustain-code.md  sustain.md
core/governance/: guardrails.md  opinions-contract.md
core/roles/: README.md  domain-variants.md  index.md  invocation-syntax.md  kickback-rubrics.md  lifecycle-matrix.md  metrics-framework.md  role-composition-patterns.md  subagent-mapping.md  system-prompt-bundle.md
core/spec/: VERSION.md  domains.md  lifecycle.md  privacy.md  sod.md
docs/: CI-CD.md  README.md  ai-guards.md  ai-setup.md  capture.md  close.md  commit-readiness.md  commit_readiness.md  decision-arbitration.md  domains.md  explore.md  external-constraints.md  formalize.md  guardrails.md  index.md  layer-model.md  lifecycle.md  model-selection-matrix.md  privacy.md  security-model.md  sod.md  sustain.md  user-guide.md
docs/adr/: 001-policy-engine.md  002-validation-model.md
docs/ai-guards/: README.md
examples/: README.md
examples/code/template-python-cli/: CLAUDE.md  README.md  pyproject.toml
examples/code/template-python-cli/praxis/: 01-capture.md  02-sense.md  03-explore.md  04-shape.md  05-formalize.md  06-commit.md  07-execute.md  CAPTURE.md  README.md  SENSE.md  SUSTAIN.md  praxis.yaml
examples/code/template-python-cli/src/template_python_cli/: __init__.py
examples/code/template-python-cli/src/template_python_cli/domain/: __init__.py
examples/code/template-python-cli/tests/: test_cli.py
examples/code/template-python-cli/tests/features/: helloworld.feature
examples/code/template-python-cli/tests/step_defs/: test_helloworld.py
guides/: README.md  ai-setup.md  user-guide.md
handoff/: README.md  spike-formalize-domains-handoff.md
research/: README.md
research-library/: CATALOG.md  README.md
scratch/: 01-capture.md  CLAUDE_model_user.md  CLAUDE_model_user_code.md  CLAUDE_model_user_create.md  ai-guards-braindump.md  claude-code-subagent-taxonomy_2025-12-29.md  code-execute-opinions-gui-research_2025-12-29.md  code-execute-opinions-research_2025-12-29.md  create-render-run-prepare-clarifications.md  example-create-render-run-journey.md  example-create-render-run-journey.txt  generate-creation-prompts.txt  governance_gap_analysis.md  pr-42-ai-guards.md  praxis-structure-output-2025-12-29.md  project-structure-reorganization-2025-12-29.md
tests/: __init__.py  conftest.py  test_ai_guards_models.py  test_ai_guards_service.py  test_catalog_metadata_parser.py  test_catalog_writer.py  test_cataloging_service.py  test_cli_contracts.py  test_domain.py  test_domain_creation.py  test_librarian.py  test_pipeline_service.py  test_pipeline_state_repo.py  test_stage_executors.py  test_stage_template_integration.py  test_templates.py
tmp/: gh-quoting-issue.md  issue-70-body.md  issue-71-body.md  issue-ai-permissions.md  issue-domain-transitions.md  issue-regression-detection.md  issue-shape-up.md  issue-sod-template.md  issue-subtype-taxonomies.md  issue-sustain-non-code.md
(+451 files in other folders)
