[tool.poetry]
name = "template-python-cli"
version = "0.1.0"
description = "A reusable Python CLI project template"
authors = ["jayers99"]
readme = "README.md"
packages = [{include = "template_python_cli", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-bdd = "^7.0"
ruff = "^0.8"
mypy = "^1.0"

[tool.poetry.scripts]
template-python-cli = "template_python_cli.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
